--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,21 @@
-Version: 2.2.0
+Version: 2.3.0
   - Updated Bootstrap to version 4.5.3
   - Updated all outdated third party vendor libraries to their latest versions
   - Updated the PHP Email Form to v2.3
   - Other small fixes and improvements
 
+Version: 2.2.1
+  - Updated Bootstrap to version 4.5.2
+  - Updated all outdated third party vendor libraries to their latest versions
+
+Version: 2.2.0
+  - Updated the PHP Email Form to v2.1
+  - Other small fixes and improvements
+  
 Version: 2.1.0
   - Updated Bootstrap to version 4.5.0
   - Updated the PHP Email Form library to version 2.0 with reCaptcha support
   - Aded inner-page.html tempalte
-  - Added smooth scroll on page load with hash links in the url
   - Updated all outdated third party vendor libraries to their latest versions
   - Other small fixes and improvements
   
@@ -18,4 +25,4 @@ Version: 2.0.0
   - Added NodeJS NPM Development version (Pro unlimited & Membership members)
   
 Version: 1.0.0
-- Initial Release
+  - Initial Release
